--- a/index.html
+++ b/index.html
@@ -1,157 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>WebStudio — Studio</title>
+    <!-- B13: Google Fonts одним линком -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- HEADER -->
-    <header>
-      <nav>
-        <!-- Логотип -->
-        <a href="./index.html" class="logo">WebStudio</a>
-
-        <!-- Меню -->
-        <ul>
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <!-- Контакты -->
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <!-- Header: одинаков на обеих страницах (B12) -->
+    <header class="header">
+      <div class="container nav">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-accent">Studio</span></a
+        >
+        <!-- B6: текст -->
+        <nav class="site-nav">
+          <ul class="menu">
+            <li><a class="link current" href="./index.html">Studio</a></li>
+            <!-- B7 относительные пути -->
+            <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="link" href="#contacts">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li>
+              <a class="contact-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
-    <!-- MAIN -->
     <main id="studio">
-      <!-- HERO -->
+      <!-- Hero -->
       <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <!-- B9 -->
+          <button type="button" class="btn btn-primary">Order Service</button>
+          <!-- B10/B14 -->
+        </div>
       </section>
 
-      <!-- ADVANTAGES -->
-      <section class="advantages">
-        <h2>Advantages</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <!-- Advantages -->
+      <section class="section advantages">
+        <div class="container">
+          <h2 class="section-title">Advantages</h2>
+          <!-- B11 -->
+          <ul class="features">
+            <!-- B15 -->
+            <li class="feature">
+              <h3 class="feature-title">Strategy</h3>
+              <p class="feature-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature">
+              <h3 class="feature-title">Punctuality</h3>
+              <p class="feature-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature">
+              <h3 class="feature-title">Diligence</h3>
+              <p class="feature-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature">
+              <h3 class="feature-title">Technologies</h3>
+              <p class="feature-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <!-- WHAT WE DO -->
-      <section id="portfolio" class="what-we-do">
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/desktop.jpg"
-              alt="Desktop application"
-              width="360"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/mobile.jpg"
-              alt="Mobile application"
-              width="360"
-            />
-          </li>
-          <li>
-            <img src="./images/design.jpg" alt="Web design" width="360" />
-          </li>
-        </ul>
+      <!-- What are we doing -->
+      <section id="portfolio" class="section works-section">
+        <div class="container">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="works">
+            <li>
+              <img
+                src="./images/desktop.jpg"
+                alt="Desktop application"
+                width="360"
+              />
+            </li>
+            <!-- B8/B9 -->
+            <li>
+              <img
+                src="./images/mobile.jpg"
+                alt="Mobile application"
+                width="360"
+              />
+            </li>
+            <li>
+              <img src="./images/design.jpg" alt="Web design" width="360" />
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <!-- TEAM -->
-      <section class="team">
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/team1.jpg"
-              alt="Mark Guerrero — Product Designer"
-              width="264"
-            />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team2.jpg"
-              alt="Tom Ford — Frontend Developer"
-              width="264"
-            />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team3.jpg"
-              alt="Camila Garcia — Marketing"
-              width="264"
-            />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team4.jpg"
-              alt="Daniel Wilson — UI Designer"
-              width="264"
-            />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+      <!-- Team -->
+      <section class="section team-section">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team">
+            <li class="card">
+              <img
+                src="./images/team1.jpg"
+                alt="Mark Guerrero — Product Designer"
+                width="264"
+              />
+              <h3 class="card-title">Mark Guerrero</h3>
+              <p class="card-text">Product Designer</p>
+            </li>
+            <li class="card">
+              <img
+                src="./images/team2.jpg"
+                alt="Tom Ford — Frontend Developer"
+                width="264"
+              />
+              <h3 class="card-title">Tom Ford</h3>
+              <p class="card-text">Frontend Developer</p>
+            </li>
+            <li class="card">
+              <img
+                src="./images/team3.jpg"
+                alt="Camila Garcia — Marketing"
+                width="264"
+              />
+              <h3 class="card-title">Camila Garcia</h3>
+              <p class="card-text">Marketing</p>
+            </li>
+            <li class="card">
+              <img
+                src="./images/team4.jpg"
+                alt="Daniel Wilson — UI Designer"
+                width="264"
+              />
+              <h3 class="card-title">Daniel Wilson</h3>
+              <p class="card-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <!-- FOOTER -->
-    <footer id="contacts">
-      <a href="./index.html" class="logo">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <!-- Footer -->
+    <footer id="contacts" class="footer">
+      <div class="container">
+        <a href="./index.html" class="logo footer-logo"
+          >Web<span class="logo-accent">Studio</span></a
+        >
+        <!-- B6 -->
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing &amp; growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
