--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,60 @@
                 <p>App</p>
               </div>
             </li>
-            <!-- Добавь оставшиеся карточки по макету (все JPG) -->
+            <li>
+              <img
+                src="./images/portfolio-taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3>Screen Illustrations</h3>
+              <p>Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-instagram-stories.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
+              <h3>Instagram Stories Concept</h3>
+              <p>Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-organic-food.jpg"
+                alt="Organic Food"
+                width="360"
+              />
+              <h3>Organic Food</h3>
+              <p>Web Site</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-fresh-coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+              />
+              <h3>Fresh Coffee</h3>
+              <p>Web Site</p>
+            </li>
           </ul>
         </div>
       </section>
